Fix footer formatting on small mobile

--- a/main.css
+++ b/main.css
@@ -148,6 +148,7 @@ footer a {
   display: flex;
   justify-content: center;
   padding-top: 20px;
+  padding-left: 0px;
 }
 
 #social-icons ul li {
